# homelab-k8s

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  renovate.json  temp.yaml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: renovate.json  renovate.json5
.github/workflows/: tests.yml
cluster/: README.md
cluster/actual/: .gitignore  README.md  deployment.yaml  dns.yaml  ingress.yaml  pvc.yaml  sealed-secret.yaml  service.yaml
cluster/adsb/: README.md  deployment-flightradar24.yaml  deployment-piaware.yaml  deployment-planefinder.yaml  deployment-readsb.yaml  dns.yaml  ingress.yaml  pvc-autogain.yaml  pvc-collectd.yaml  pvc-globe-history.yaml  pvc-rrd.yaml  sealed-secret.yaml  service-readsb-data.yaml  service-readsb-metrics.yaml  service-readsb-web.yaml  service-telegraf-metrics.yaml  servicemonitor.yaml  servicemonitory.yaml
cluster/alloy/: release.yaml  source.yaml
cluster/authentik/: README.md  dns.yaml  ingress.yaml  middleware-iframe.yaml  middleware.yaml  pvc-media.yaml  release.yaml  sealed-secret.yaml  source.yaml  truncate-job.yaml
cluster/bookstack/: README.md  deployment-bookstack.yaml  deployment-mysql.yaml  deployment.yaml  dns.yaml  ingress.yaml  pvc-bookstack.yaml  pvc-mysql.yaml  sealed-secret.yaml  service-bookstack.yaml  service-mysql.yaml
cluster/chrony/: README.md  deployment.yaml  dns1.yaml  dns2.yaml  service.yaml  (+1 more)
dashboards/: cloudflare-tunnels-cloudflared.json  flux-cluster-stats.json  harbor.json  kubernetes-views-k3s-cluster.json  kubernetes-views-nodes-list.json  logs-app.json  longhorn.json  node-exporter-full.json  omada-overview.json  readsb-protobuf.json  simple-omada-dashboard.json  technitium-dns-dashboard.json  ultrafeeder.json
deployment/: README.md  configure.py  inventory.py  rotate_certs.py  sync_time.py  update.py  update_lts.py
docs/: IP_ADDRESSES.md
infra/: configure.py  inventory.py
os/: .gitignore  README.md  autoinstall.tmpl.yaml  autoinstall.yaml  prep.py
scripts/: cache_images.py  check_images.py  common.py  download_volume.py  find_volume.py  list_images.py  overwrite_existing_volume.py  postgres_backup.py  registry_proxy.py  restart_deamonsets.py
software/: README.md  configure.py  inventory.py  registries.yaml  rotate_certs.py  update.py
(+422 files in other folders)
