[project]
    name = "homelab-k8s"
    version = "0.1.0"
    description = ""
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "pyinfra>=3.1.1",
        "fabric>=3.2.2",
        "pyyaml>=6.0.2",
    ]

[dependency-groups]
    dev = [
    "pre-commit>=4.0.1",
    "pre-commit-uv>=4.2.0",
]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[[tool.uv.index]]
    name = "mypypi"
    url = "https://pypi.nathanv.app/pypi/simple"
    default = true
