[project]
    name            = "homelab-k8s"
    version         = "0.1.0"
    description     = "My homelab using Kubernetes and cofiguration as code"
    readme          = "README.md"
    requires-python = ">=3.13"
    dependencies    = ["pyinfra>=3.1.1", "fabric>=3.2.2", "pyyaml>=6.0.2"]

[dependency-groups]
    dev = [
    "prek>=0.4.5",
]

[tool.ruff.lint]
    select = [
        "E",
        "W",
        "F",   # pycodestyle + pyflakes (flake8's defaults)
        "I",   # isort
        "UP",  # pyupgrade
        "N",   # pep8-naming
        "B",   # flake8-bugbear
        "C4",  # flake8-comprehensions
        "PT",  # flake8-pytest-style
        "Q",   # flake8-quotes
        "ISC", # flake8-implicit-str-concat
        "TID", # flake8-tidy-imports
        "FLY", # flynt
        "RUF", # ruff-specific rules
        "ANN", # type annotations
    ]

    ignore = ["ANN401", "E501"]

[[tool.uv.index]]
    name    = "mypypi"
    url     = "https://pypi.nathanv.app/pypi/simple"
    default = true
